Fixed some layout bugs

--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@ body{
     font-family: "Open Sans", sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 li{
@@ -87,8 +90,6 @@ h1, h2, h3{
     max-height: 380px;
     margin-top: 20px;
     overflow-y: scroll;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .search-shows-wrapper::-webkit-scrollbar{
@@ -118,7 +119,7 @@ h1, h2, h3{
     width: 400px;
     display: flex;
     padding: 0px 30px;
-    margin-bottom: -40px;
+    margin-left: -40px;
     align-items: center;
     justify-content: space-between;
 }
@@ -402,6 +403,7 @@ body.loaded > *:not(.splash) {
         flex-direction: column;
         padding: 5px 30px;
         margin-bottom: 10px;
+        margin-left: -40px;
         align-items: center;
         justify-content: space-between;
     }
